--- a/miniprogram/packageB/pages/yang_new_student/kun_bank/kun_bank.wxss
+++ b/miniprogram/packageB/pages/yang_new_student/kun_bank/kun_bank.wxss
@@ -17,3 +17,22 @@ page {
   margin-top: 20rpx;
   padding: 15rpx;
 }
+
+.weui-article__h1{
+  text-align-last: center;
+}
+
+.barclays{
+  width: 90px;
+  height: 90px;
+}
+
+.lloyds{
+  width: 105px;
+  height: 90px;
+}
+
+.hsbc{
+  width: 95px;
+  height: 90px;
+}
