--- a/miniprogram/packageB/pages/yang_new_student/kun_brp/kun_brp.wxss
+++ b/miniprogram/packageB/pages/yang_new_student/kun_brp/kun_brp.wxss
@@ -16,16 +16,7 @@ margin-top: 20rpx;
 padding: 15rpx;
 }
 
-.attention {
-width: 95%;
-background-color: sandybrown;
-box-sizing: border-box;
-border-radius: 5%;
-margin-left: 20rpx;
-margin-right:20rpx;
-margin-top: 20rpx;
-padding: 15rpx;
-}
+
 
 .logoIMG {
 width: 100%;
@@ -34,4 +25,26 @@ height: 260rpx;
 
 .officer {
 width: 100%;
+}
+
+.weui-article__h3{
+  font-weight: 700;
+  font-size: 35rpx;
+  margin-left: 30rpx;
+  background-color: #B0C4DE;
+  margin-right: 30rpx;
+}
+
+.attentions{
+  font-weight: 700;
+  font-size: 35rpx;
+  margin-left: 30rpx;
+  background-color: sandybrown;
+  margin-right: 30rpx;
+}
+
+.police{
+  width: 693rpx;
+  height : 200rpx;
+  
 }
